--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script:
   - docker container run -e CI=true padronlv/docker-react npm run test
 
 deploy:
+  edge: true
   provider: elasticbeanstalk
   region: "us-west-2"
   app: "docker-react"
